Support for versions from 1.18.2